<resources>
    <string name="app_name">HiddenHands</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_search_view"><font size="14">Search</font></string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_user_name">Username</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_account">CREATE ACCOUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="anx_symptoms">الصداع
العصبية أو التوتر
الشعور بغصة في الحلق
صعوبة في التركيز
التعب
الاهتياج وقلة الصبر
الارتباك
الإحساس بتوتر العضلات
الأرق (صعوبة الخلود إلى النوم و/أو مشاكل في النوم)
 فرط التعرق
ضيق النّفـَس
آلام في البطن
الإسهال.</string>

    <string name="anx_description">من الطبيعي أن يشعر الإنسان بالقلق أو بالفزع، من حين إلى آخر أما إذا كان الإحساس بالقلق يتكرر في أحيان متقاربة دون أي سبب حقيقي، إلى درجة إنه يعيق مجرى الحياة اليومي الطبيعي فالمرجح أن هذا الإنسان يعاني من اضطراب القلق.

هذا الاضطراب يسبب القلق الزائد وغير الواقعي وشعورا بالخوف، وهو يفوق ما يمكن اعتباره رد فعل طبيعيا على حالة معينة.</string>

    <string name="anx_treatments">يتركب علاج القلق من علاجان رئيسيان هما العلاج الدوائي والعلاج النفساني، كل منهما على حدة أو كلاهما معا.

وقد تكون هنالك حاجة إلى فترات تجربة وخطأ من أجل تحديد العلاج العيني الأكثر ملاءمة ونجاعة لمريض معين تحديدا والعلاج الذي يشعر معه المريض بالراحة والاطمئنان.

علاج القلق الدوائي
تتوفر أنواع شتى من علاج القلق الدوائي الهادفة إلى التخفيف من أعراض القلق الجانبية التي ترافق اضطراب القلق المتعمم، ومن بينها:

أدوية مضادة للقلق: البنزوديازيبينات (Benzodiazepines) هي مواد مهدئة تتمتع بأفضلية تتمثل في إنها تخفف من حدة الشعور بالقلق في غضون 30 – 90 دقيقة. أما نقيصتها فتتمثل في إنها قد تسبب الإدمان في حال تناولها لفترة تزيد عن بضعة أسابيع.
أدوية مضادة للاكتئاب: هذه الأدوية تؤثر على عمل الناقلات العصبية (Neurotransmitter) التي من المعروف إن لها دورا هاما في نشوء وتطور اضطرابات القلق. وتشمل قائمة الأدوية المستخدمة لمعالجة اضطراب القلق المتعمم، من بين ما تشمله: بروزاك - Prozac (فلوكسيتين - Fluoxetine) وغيره.</string>
    <string name="dep_symptoms">فقدان الرغبة في ممارسة الفعاليات اليومية الاعتيادية
الإحساس بالعصبية والكآبة
الإحساس بانعدام الأمل
نوبات من البكاء بدون أي سبب ظاهر
اضطرابات في النوم
صعوبات في التركيز
صعوبات في اتخاذ القرارات
زيادة أو نقصان الوزن بدون قصد
عصبية
قلق وضجر
حساسية مفرطة
إحساس بالتعب أو الوهن
إحساس بقلة القيمة
فقدان الرغبة في ممارسة الجنس
أفكار انتحارية أو محاولات للانتحار
مشاكل جسدية بدون تفسير، مثل أوجاع الظهر أو الرأس</string>
    <string name="dep_description">هو مرض يصيب النفس والجسم. يؤثر الاكتئاب على طريقة التفكير والتصرف ومن شأنه أن يؤدي إلى العديد من المشاكل العاطفية والجسمانية.

عادة، لا يستطيع الأشخاص المصابون بمرض الاكتئاب الاستمرار بممارسة حياتهم اليومية كالمعتاد، إذ إن الاكتئاب يسبب لهم شعورا بانعدام أية رغبة في الحياة.

تجدر الإشارة إلى أن الاكتئاب يعد أحد أكثر الأمراض المنتشرة في العالم.</string>

    <string name="dep_treatments">
        المعالجة الدوائية
المعالجة النفسانية
المعالجة بالتخليج الكهربيّ (المعالجة بالصدمة الكهربائية - Electroconvulsive treatment Electroshock treatment - ECT)
كما إن هنالك طرق لعلاج الاكتئاب لم تستوف البحث والتجريب مثل الطرق المقبولة المذكورة أعلاه، من بينها:

التنبيه (التحفيز) الدماغي
علاجات مكمِّلة وبديلة.
ثمة حالات معيّنة يستطيع طبيب العائلة فيها علاج الاكتئاب بنفسه.
    </string>
    <string name="aut_description">مرض التوحد (أو الذاتوية - Autism) هي أحد الاضطرابات التابعة لمجموعة من اضطرابات التطور المسماة باللغة الطبية "اضطرابات في الطيف الذاتويّ" (Autism Spectrum Disorders - ASD) تظهر في سن الرضاعة، قبل بلوغ الطفل سن الثلاث سنوات، على الأغلب.

بالرغم من اختلاف خطورة وأعراض مرض التوحد من حالة إلى أخرى، إلا أن جميع اضطرابات الذاتوية تؤثر على قدرة الطفل على الاتصال مع المحيطين به وتطوير علاقات متبادلة معهم.

تُظهر التقديرات أن 6 من بين كل 1000 طفل في الولايات المتحدة يعانون من مرض التوحد وأن عدد الحالات المشخصة من هذا الاضطراب تزداد باضطراد، على الدوام.

من غير المعروف، حتى الآن، ما إذا كان هذا الازدياد هو نتيجة للكشف والتبليغ الأفضل نجاعة عن الحالات، أم هو ازدياد فعليّ وحقيقي في عدد مصابي مرض التوحد، أم نتيجة هذين العاملين سوية.</string>
    <string name="aut_symptoms">لاطفال المصابون بمرض التوحد يعانون، أيضا وبصورة شبه مؤكدة، من صعوبات في ثلاثة مجالات تطورية أساسية، هي:

العلاقات الاجتماعية المتبادلة
اللغة
السلوك.
نظرا لاختلاف علامات وأعراض مرض التوحد من مريض إلى آخر، فمن المرجح أن يتصرف كل واحد من طفلين مختلفين، مع نفس التشخيص الطبي، بطرق مختلفة جدا وأن تكون لدى كل منهما مهارات مختلفة كليا.

لكن حالات مرض التوحد شديدة الخطورة تتميز، في غالبية الحالات، بعدم القدرة المطلق على التواصل أو على إقامة علاقات متبادلة مع أشخاص آخرين.

تظهر اعراض التوحد عند أغلب الاطفال، في سن الرضاعة، بينما قد ينشأ أطفال آخرون ويتطورون بصورة طبيعية تماما خلال الأشهر أو السنوات، الأولى من حياتهم لكنهم يصبحون، فجأة، منغلقين على أنفسهم، عدائيين أو يفقدون المهارات اللغوية التي اكتسبوها حتى تلك اللحظة.

بالرغم من أن كل طفل يعاني من اعراض مرض التوحد، يظهر طباعا وأنماطا خاصة به، إلا أن المميزات التالية هي الأكثر شيوعا لهذا النوع من الاضطراب:

1- المهارات الاجتماعية
لا يستجيب لمناداة اسمه
لا يُكثر من الاتصال البصريّ المباشر
غالبا ما يبدو أنه لا يسمع محدّثه
يرفض العناق أو ينكمش على نفسه
يبدو إنه لا يدرك مشاعر وأحاسيس الآخرين
يبدو أنه يحب أن يلعب لوحده، يتوقع في عالمه الشخص الخاص به.
2- المهارات اللغوية
يبدأ الكلام (نطق الكلمات) في سن متأخرة، مقارنة بالأطفال الآخرين
يفقد القدرة على قول كلمات أو جمل معينة كان يعرفها في السابق
يقيم اتصالا بصريا حينما يريد شيئا ما
يتحدث بصوت غريب أو بنبرات وإيقاعات مختلفة، يتكلم باستعمال صوت غنائي، وتيريّ أو بصوت يشبه صوت الإنسان الآلي (الروبوت)
لا يستطيع المبادرة إلى محادثة أو الاستمرار في محادثة قائمة
قد يكرر كلمات، عبارات أو مصطلحات، لكنه لا يعرف كيفية استعمالها.
3- السلوك
ينفذ حركات متكررة مثل، الهزاز، الدوران في دوائر أو التلويح باليدين
ينمّي عادات وطقوسا يكررها دائما
يفقد سكينته لدى حصول أي تغير، حتى التغيير الأبسط أو الأصغر، في هذه العادات أو في الطقوس
دائم الحركة
يصاب بالذهول والانبهار من أجزاء معينة من الأغراض، مثل دوران عجل في سيارة لعبة
شديد الحساسية، بشكل مبالغ فيه، للضوء، للصوت أو للمس، لكنه غير قادر على الإحساس بالألم.</string>
    <string name="aut_treatments">لا يتوفر، حتى يومنا هذا، علاج واحد ملائم لكل المصابين بنفس المقدار. وفي الحقيقة، فإن تشكيلة العلاجات المتاحة لمرضى التوحد والتي يمكن اعتمادها في البيت أو في المدرسة هي متنوعة ومتعددة جدا، على نحو مثير للذهول.
بإمكان الطبيب المعالج المساعدة في إيجاد الموارد المتوفرة في منطقة السكن والتي يمكنها أن تشكل أدوات مساعدة في العمل مع الطفل مريض التوحد.

علاج التوحد يشمل:

العلاج السلوكي (Behavioral Therapy) وعلاجات أمراض النطق واللغة (Speech - language pathology)
العلاج التربوي - التعليميّ
العلاج الدوائي.</string>

</resources>
