<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context="com.example.aly.hiddenhands.fragments.SignupDoctor">

    <LinearLayout
        android:id="@+id/login_form_doctor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/icon_doctor"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/doctor" />
        <TextView
            android:id="@+id/login_text_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="16dp"
            android:text="Hello Doctor,\nWelcome To Our App"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_auto_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/email_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_auto_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/password_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                app:passwordToggleEnabled="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/age_auto_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/age_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_age"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Gender :"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:text="Male"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

        </LinearLayout>


        <Button
            android:id="@+id/create_account_doctor_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/buttonDisabledStateColor"
            android:enabled="false"
            android:text="@string/create_account"
            android:textColor="@color/textDisabledStateColor"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
